--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title> NOISE WEB </title>
 <body>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src ="gambar/gambar2.png">
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src ="gambar2.png">
 
 <h1> </h1><h1> </h1>
 <div> 
