--- a/profil.html
+++ b/profil.html
@@ -2,7 +2,7 @@
 <head>
 <title> NOISE WEB </title>
 <body>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src ="gambar/gambar2.png">
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src ="andresuarisman.github.io/gambar2.png">
 <!-- menu -->
 <h1> </h1>
 <h1> </h1>
@@ -16,7 +16,7 @@
 <!-- content -->
 <h1> </h1> 
 <h1> </h1>
-<img src ="gambar/gambar1.jpg" height="100" width="100" > 
+<img src ="andresuarisman.github.io/gambar1.jpg" height="100" width="100" > 
 
 <h1 >UNIVERSITAS NEGRI SULTAN SYARIF KHASIM </h1>
 
