--- a/galeri.html
+++ b/galeri.html
@@ -2,7 +2,7 @@
 <head>
 <title> NOISE WEB </title>
 <body>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src ="gambar/gambar2.png">
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src ="andresuarisman.github.io/gambar2.png">
 <h1> </h1><h1> </h1>
 <div> 
 &nbsp;&nbsp;<a href ="index.html">Home</a>
@@ -12,12 +12,12 @@
 
 </div>
 <h1> </h1>
-<img src="gambar/gambar3.jpg" alt="gambar gedung UIN SUSKA" <p> Gambar Gedung UIN SUSKA</p>
+<img src="andresuarisman.github.io/gambar3.jpg" alt="gambar gedung UIN SUSKA" <p> Gambar Gedung UIN SUSKA</p>
 
 
-<img src="gambar/gambar4.png" alt="logo UIN SUSKA">
+<img src="andresuarisman.github.io/gambar4.png" alt="logo UIN SUSKA">
 <p> </p>
-<img src="gambar/gambar5.jpg" alt="gambar MABA">
+<img src="andresuarisman.github.io/gambar5.jpg" alt="gambar MABA">
 
 
 </body>
