--- a/profil.html
+++ b/profil.html
@@ -20,13 +20,13 @@
 
 <h1 >UNIVERSITAS NEGRI SULTAN SYARIF KHASIM </h1>
 
-<p>&nbsp;&nbsp; Universitas Islam Negeri Sultan Syarif Kasim Riau disebut juga UIN Suska adalah sebuah Universitas Islam Negeri yang berada di Simpang Baru, Tampan, Pekanbaru. Penamaannya dengan Sultan Syarif Kasim yaitu nama sultan ke-12 atau sultan terakhir Kesultanan Siak Sri Inderapura. Wikipedia
+<p>&nbsp;&nbsp; <b>Universitas Islam Negeri Sultan Syarif Kasim Riau<b> disebut juga UIN Suska adalah sebuah Universitas Islam Negeri yang berada di Simpang Baru, Tampan, Pekanbaru. Penamaannya dengan Sultan Syarif Kasim yaitu nama sultan ke-12 atau sultan terakhir Kesultanan Siak Sri Inderapura. Wikipedia
 </p>
 <p><b>Alamat:</b> Jalan HR. Soebrantas Panam Km. 15 No. 155, Tuah Madani, Kec. Tampan, Kabupaten Kampar, Riau 28293
 </p>
 <p><b>Didirikan:</b> 4 Januari 2005</p>
 <p><b>Provinsi:</b> Riau</p>
-<p ><b>Telepon:</b><style="color:blue;"> (0761) 562223</p>
+<p style="color:blue;><b>Telepon:</b>(0761) 562223</p>
 <p><b>Warna:</b> Putih, Hijau 
 </p>
 
