--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 
 <h1> </h1><h1> </h1>
 <div> 
-&nbsp;&nbsp;<a href ="index.html"style="color:MediumseaGreen">Home</a>
-&nbsp;&nbsp;&nbsp;<a href ="profil.html"style="color:MediumseaGreen">Profil</a>
-&nbsp;&nbsp;&nbsp;<a href ="galeri.html"style="color:MediumseaGreen">Galeri</a>
+&nbsp;&nbsp;<a href ="index.html" style="color:MediumseaGreen">Home</a>
+&nbsp;&nbsp;&nbsp;<a href ="profil.html" style="color:MediumseaGreen">Profil</a>
+&nbsp;&nbsp;&nbsp;<a href ="galeri.html" style="color:MediumseaGreen">Galeri</a>
 &nbsp;&nbsp;&nbsp;<a href ="https://fst.uin-suska.ac.id/"target="blank" style="color:MediumseaGreen" >Web Fakultas</a>
 
 </div>
 <!-- content -->
-<h1> Selamat Datang Di Website UIN SUSKA RIAU</h1>
+<h1 style="color:MediumseaGreen"> Selamat Datang Di Website UIN SUSKA RIAU</h1>
 
 
 </body>
