--- a/index.html
+++ b/index.html
@@ -1,21 +1,57 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title> NOISE WEB </title>
+<meta charset="utf-8">
+<link rel="stylesheet" href="index.css">
+</head>
+	
+	
 <body>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src ="andresuarisman.github.io/gambar2.png">
 
-<h1> </h1><h1> </h1>
-<div> 
-&nbsp;&nbsp;<a href ="index.html" style="color:MediumseaGreen">Home</a>
-&nbsp;&nbsp;&nbsp;<a href ="profil.html" style="color:MediumseaGreen">Profil</a>
-&nbsp;&nbsp;&nbsp;<a href ="galeri.html" style="color:MediumseaGreen">Galeri</a>
-&nbsp;&nbsp;&nbsp;<a href ="https://fst.uin-suska.ac.id/"target="blank" style="color:MediumseaGreen" >Web Fakultas</a>
+	 <header><img src="header.jpg" width="1330" height="200" ></header>
 
-</div>
-<!-- content -->
-<h1 style="color:MediumseaGreen"> Selamat Datang Di Website UIN SUSKA RIAU</h1>
+	<!--menu web-->
+	<nav id="menu">
+		<a href ="index.html" class="menu">Home |</a>
+		<a href ="profil.html" class="menu">Profil |</a>
+		<a href ="galeri.html" class="menu">Galeri |</a>
+		<a href ="https://fst.uin-suska.ac.id/"target="blank" class="menu" >Web Fakultas |</a>
+	</nav>
+	
+	<main> 
+	<div>
+	 <h1> cara membuat web</h1>
+		 <P>untuk membuat website kita memerlukan aplikasi html seperti notepad++,visual studio dll
+			</P>
+	<div>
+	
+	<div>
+	 <h1> cara membuat blog</h1>
+		 <P>untuk membuat website kita memerlukan aplikasi html seperti notepad++,visual studio dll </P>
+	<div>
+	
+	</main>
+	
+	<aside> 
+		 <li>cara membuat website</li>
+		 <li>cara membuat website</li>
+		 <li>cara membuat website</li>
+		 <li>cara membuat website</li>
+		 <li>cara membuat website</li>
+	
+	 </aside>
+	
+	
+		 
+	<footer>
+			<P>&copy; copyright 2020 Andre Suarisman</p>
+	</footer>
+	
+
+ 
 
 
 </body>
-</head>
+
 </html>
