--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <title> NOISE WEB </title>
 <meta charset="utf-8">
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="
+andresuarisman.github.io/index.css">
 </head>
 	
 	
