--- a/latihan4.html
+++ b/latihan4.html
@@ -9,7 +9,7 @@ color:red;
 </style>
 </head>
 <body>
-<h1> class="center">Warna merah dengan menggunakan Heading dan rata tengah CSS class </h1>
+<h1 class="center">Warna merah dengan menggunakan Heading dan rata tengah CSS class </h1>
 <p class="center">Warna merah dengan menggunakan Heading dan rata tengah CSS class</p>
 </body>
 </html>
