--- a/latihan5.html
+++ b/latihan5.html
@@ -10,6 +10,6 @@ p.center {
 </head>
 <body>
 <h1 class="center"> Tidak dapat mengakomodasi CSS, sebab Selectornya adalah spesial paragraf</h1>
-<p.class="center">menggunakan CSS paragraf</p>
+<p class="center">menggunakan CSS paragraf</p>
 </body>
 </html>
