--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ andresuarisman.github.io/index.css">
 	
 <body>
 
-	 <header><img src="header.jpg" width="1330px;" height="200px;" ></header>
+	 <header><img src="header.jpg" width="1330;" height="200;" ></header>
 
 	<!--menu web-->
 	<nav id="menu">
