--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ andresuarisman.github.io/index.css">
 	
 <body>
 
-	 <header align:center;><img src="header.jpg" width="1000;" height="200;" ></header>
+	 <header ><img src="header.jpg" width="1000;" min-height="200;" ></header>
 
 	<!--menu web-->
 	<nav id="menu">
