--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ andresuarisman.github.io/index.css">
 	
 <body>
 
-	 <header ><img src="header.jpg" width="1000;" min-height="200;" ></header>
+	 <header <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+><img src="header.jpg" width="1000;" min-height="200;" ></header>
 
 	<!--menu web-->
 	<nav id="menu">
