--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="
 andresuarisman.github.io/index.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 	
 	
 <body>
 
-	 <header <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-><img src="header.jpg" width="1000;" min-height="200;" ></header>
+
+	 <header> <img src="header.jpg" width="1000;" min-height="200;" ></header>
 
 	<!--menu web-->
 	<nav id="menu">
