--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="
 andresuarisman.github.io/index.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 	
 	
