--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 <head>
 <title> NOISE WEB </title>
-<meta charset="utf-8">
-<link rel="stylesheet" href="
-andresuarisman.github.io/index.css">
+	<link rel="stylesheet" href="andresuarisman.github.io/index.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 	
