--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 
-	 <header> <img src="header.jpg" width="1300;" height="200;" ></header>
+	 <header> <img src="header.jpg" width="1300px;" height="200px;" ></header>
 
 	<!--menu web-->
 	<nav id="menu">
