--- a/latihan9.html
+++ b/latihan9.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html> 
 <head>
-<link rel ="stylesheet" type="text/css" href="andresuarisman.github.io/style.css">
+<link rel ="stylesheet" type="text/css" href="andresuarisman.github.io/latihan9.css">
 
 </head>
 <body>
