--- a/latihan11.html
+++ b/latihan11.html
@@ -10,7 +10,7 @@ color:orange;
 </head>
 <body>
 <h1>ini adalah heading</h1>
-<p> Paragraf ini adalah combinasi antara stylesheet dan interna; style</p>
+<p> Paragraf ini adalah combinasi antara stylesheet dan interna style</p>
 
 </body>
 
