--- a/latihan12.html
+++ b/latihan12.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel ="stylesheet" type="text/css" href="andresuarisman.github.io/latihan9.css"
+<link rel ="stylesheet" type="text/css" href="andresuarisman.github.io/latihan9.css">
 <style>
 h1{
 color :orange;
