--- a/latihan13.html
+++ b/latihan13.html
@@ -2,13 +2,13 @@
 <html>
 <body>
   
-<h1 style = "background-color:tomato"> Tomato </h1>
-<h1 style = "background-color:orange">Orange </h1>
-<h1 style = "background-color:dodgerblue">DodgerBlue </h1>
-<h1 style = "background-color:mediumseagreen">MediumSeaGreen </h1>
-<h1 style = "background-color:gray">Grey </h1>
-<h1 style = "background-color:slateblue">SlateBlue </h1>
-<h1 style = "background-color:violet">Violet </h1>
-<h1 style = "background-color:lightgrey">LightGray </h1>
+<h1 style = "background-color:Tomato"> Tomato </h1>
+<h1 style = "background-color:Orange">Orange </h1>
+<h1 style = "background-color:DodgerBlue">DodgerBlue </h1>
+<h1 style = "background-color:MediumSeaGreen">MediumSeaGreen </h1>
+<h1 style = "background-color:Gray">Grey </h1>
+<h1 style = "background-color:SlateBlue">SlateBlue </h1>
+<h1 style = "background-color:Violet">Violet </h1>
+<h1 style = "background-color:LightGrey">LightGray </h1>
 </body>
 </html>
