--- a/latihan14.html
+++ b/latihan14.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1 style="background-color:DodgerBlue;">Hello World</h1>
-<p style="background-color:Tomato;">
+<h1 style="background-color:DodgerBlue; color:white; text-align:center;">Hello World</h1>
+<p style="background-color:Tomato; color:white;">
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
 diam nonummy nibh euismod tincidunt ut laoreet dolore magna
 aliquam erat volutpat.
