--- a/profil.html
+++ b/profil.html
@@ -1,35 +1,58 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title> NOISE WEB </title>
+<meta charset="utf-8">
+<link rel="stylesheet" href="andresuarisman.github.io/index.css">
+</head>
+	
+	
 <body>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src ="andresuarisman.github.io/gambar2.png">
-<!-- menu -->
-<h1> </h1>
-<h1> </h1>
-<div> 
-&nbsp;&nbsp;<a href ="index.html">Home</a>
-&nbsp;&nbsp;&nbsp;<a href ="profil.html">Profil</a>
-&nbsp;&nbsp;&nbsp;<a href ="galeri.html">Galeri</a>
-&nbsp;&nbsp;&nbsp;<a href ="https://fst.uin-suska.ac.id/"target="blank">Web Fakultas</a>
 
-</div>
-<!-- content -->
-<h1> </h1> 
-<h1> </h1>
-<img src ="andresuarisman.github.io/gambar1.jpg" height="100" width="100" > 
+	 <header><img src="andresuarisman.github.io/header.jpg" width="1330" height="200" ></header>
 
-<h1 >UNIVERSITAS NEGRI SULTAN SYARIF KHASIM </h1>
+	<!--menu web-->
+	<nav id="menu">
+		<a href ="index.html" class="menu">Home |</a>
+		<a href ="profil.html" class="menu">Profil |</a>
+		<a href ="galeri.html" class="menu">Galeri |</a>
+		<a href ="https://fst.uin-suska.ac.id/"target="blank" class="menu" >Web Fakultas |</a>
+	</nav>
+	
+	<main> 
+	<table>
+	<td >
+		<tr ><img src ="andresuarisman.github.io/profilpoto.jpg"  alt=" my photo profil" width="100px" height="200px" align="center" border="5"/></tr>
+	</td>
+	<td>
+		<p text-align="center">Nama : Andre Suarisman </p>
+	</td>
+	<td>
+		
+			
+	</td>
+	
+	</table>
+	</main>
+	
+	<aside> 
+	 <li>cara membuat website</li>
+		 <li>cara membuat website</li>
+		 <li>cara membuat website</li>
+		 <li>cara membuat website</li>
+		 <li>cara membuat website</li>
+	 </aside>
+	
+	
+		 
+	<footer>
+			<P>&copy; copyright 2020 Andre Suarisman</p>
+	</footer>
+	
 
-<p>&nbsp;&nbsp; <b>Universitas Islam Negeri Sultan Syarif Kasim Riau<b> disebut juga UIN Suska adalah sebuah Universitas Islam Negeri yang berada di Simpang Baru, Tampan, Pekanbaru. Penamaannya dengan Sultan Syarif Kasim yaitu nama sultan ke-12 atau sultan terakhir Kesultanan Siak Sri Inderapura. Wikipedia
-</p>
-<p><b>Alamat:</b> Jalan HR. Soebrantas Panam Km. 15 No. 155, Tuah Madani, Kec. Tampan, Kabupaten Kampar, Riau 28293
-</p>
-<p><b>Didirikan:</b> 4 Januari 2005</p>
-<p><b>Provinsi:</b> Riau</p>
-<p style="color:blue;><b>Telepon:</b>(0761) 562223</p>
-<p><b>Warna:</b> Putih, Hijau 
-</p>
+ 
+
 
 </body>
-</head>
+
 </html>
