--- a/galeri.html
+++ b/galeri.html
@@ -1,25 +1,48 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title> NOISE WEB </title>
+<meta charset="utf-8">
+<link rel="stylesheet" href="index.css">
+</head>
+	
+	
 <body>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src ="andresuarisman.github.io/gambar2.png">
-<h1> </h1><h1> </h1>
-<div> 
-&nbsp;&nbsp;<a href ="index.html">Home</a>
-&nbsp;&nbsp;&nbsp;<a href ="profil.html">Profil</a>
-&nbsp;&nbsp;&nbsp;<a href ="galeri.html">Galeri</a>
-&nbsp;&nbsp;&nbsp;<a href ="https://fst.uin-suska.ac.id/"target="blank">Web Fakultas</a>
 
-</div>
-<h1> </h1>
-<img src="andresuarisman.github.io/gambar3.jpg" alt="gambar gedung UIN SUSKA" <p> Gambar Gedung UIN SUSKA</p>
+	 <header><img src="header.jpg" width="1330" height="200" ></header>
 
+	<!--menu web-->
+	<nav id="menu">
+		<a href ="index.html" class="menu">Home |</a>
+		<a href ="profil.html" class="menu">Profil |</a>
+		<a href ="galeri.html" class="menu">Galeri |</a>
+		<a href ="https://fst.uin-suska.ac.id/"target="blank" class="menu" >Web Fakultas |</a>
+	</nav>
+	
+	<main> 
+	
+		
+	
+	</main>
+	
+	<aside> 
+	 <li>cara membuat website</li>
+		 <li>cara membuat website</li>
+		 <li>cara membuat website</li>
+		 <li>cara membuat website</li>
+		 <li>cara membuat website</li>
+	 </aside>
+	
+	
+		 
+	<footer>
+			<P>&copy; copyright 2020 Andre Suarisman</p>
+	</footer>
+	
 
-<img src="andresuarisman.github.io/gambar4.png" alt="logo UIN SUSKA">
-<p> </p>
-<img src="andresuarisman.github.io/gambar5.jpg" alt="gambar MABA">
+ 
 
 
 </body>
-</head>
+
 </html>
