--- a/profil.html
+++ b/profil.html
@@ -22,7 +22,7 @@
 	<main> 
 	<table>
 	<td >
-		<tr ><img src ="andresuarisman.github.io/profilpoto.jpg"  alt=" my photo profil" width="100px" height="200px" align="center" border="5"/></tr>
+		<tr ><img src ="andresuarisman.github.io/profilpoto.jpg"  alt=" my photo profil" align="center" width="100px" height="200px" border="5"/></tr>
 	</td>
 	<td>
 		<p text-align="center">Nama : Andre Suarisman </p>
