--- a/profil.html
+++ b/profil.html
@@ -24,8 +24,11 @@
 	<td >
 		<tr ><center><img src ="andresuarisman.github.io/profilpoto.jpg"  alt=" my photo profil" width="100px" height="200px" border="5"/></center></tr>
 	</td>
-	<td>
-		<p text-align="center">Nama : Andre Suarisman </p>
+	<td id="biodata">
+		<p > <center> Andre Suarisman </center> </p>
+		<p > <center> 11950111673 </center> </p>
+		<p > <cente>TEKNIK INFORMATIKA </center> </p>
+		
 	</td>
 	<td>
 		
