--- a/profile.html
+++ b/profile.html
@@ -19,10 +19,10 @@
                   <a href="#" class="logo">AS WEB</a>
                   <!--menu--------------------->
                   <ul>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Profil</a></li>
-                  <li><a href="#">Galery</a></li>
-                  <li><a href="#">Data</a></li>
+                  <li><a href="https://andresuarisman.github.io/index.html">Home</a></li>
+                  <li><a href="https://andresuarisman.github.io/profil.html">Profil</a></li>
+                  <li><a href="https://andresuarisman.github.io/galery.html">Galery</a></li>
+                  <li><a href="https://andresuarisman.github.io/data.html">Data</a></li>
                   <li><a href="https://fst.uin-suska.ac.id/">WEB FAKULTAS</a></li>
                   </ul>
               </nav>
