--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
               <a href="#" class="logo">AS WEB</a>
               <!--menu--------------------->
               <ul>
-              <li><a href="andresuarisman.github.io/index.html">Home</a></li>
-              <li><a href="andresuarisman.github.io/profile.html">Profile</a></li>
-              <li><a href="andresuarisman.github.io/html">Galery</a></li>
-              <li><a href="andresuarisman.github.io/data">Data</a></li>
+              <li><a href="https://andresuarisman.github.io/index.html">Home</a></li>
+              <li><a href="https://andresuarisman.github.io/profile.html">Profile</a></li>
+              <li><a href="https://andresuarisman.github.io/html">Galery</a></li>
+              <li><a href="https://andresuarisman.github.io/data">Data</a></li>
               <li><a href="https://fst.uin-suska.ac.id/">WEB FAKULTAS</a></li>
               </ul>
           </nav>
@@ -37,9 +37,9 @@
             <!--social---------------------------------------------->
             <div class="social-icon">
 
-                <a href="https://web.facebook.com/andre.suarisman" target="blank" alt="fb"> <img src="gambar/fb.png" class="fb"> </a>
-                <a href="https://www.instagram.com/andre_suarisman/" target="blank" alt="ig"><img src="gambar/ig.png" class="ig"></a>
-                <a href="https://www.youtube.com/channel/UCfDFnsCcpVa72BTaQIFORsA" target="blank" alt="yt"><img src="gambar/yt.png" class="yt"></a>
+                <a href="https://web.facebook.com/andre.suarisman" target="blank" alt="fb"> <img src="https://andresuarisman.github.io/gambar/fb.png" class="fb"> </a>
+                <a href="https://www.instagram.com/andre_suarisman/" target="blank" alt="ig"><img src="https://andresuarisman.github.io/gambar/ig.png" class="ig"></a>
+                <a href="https://www.youtube.com/channel/UCfDFnsCcpVa72BTaQIFORsA" target="blank" alt="yt"><img src="https://andresuarisman.github.io/gambar/yt.png" class="yt"></a>
                 
            
             </div>
