--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
               <ul>
               <li><a href="https://andresuarisman.github.io/index.html">Home</a></li>
               <li><a href="https://andresuarisman.github.io/profile.html">Profile</a></li>
-              <li><a href="https://andresuarisman.github.io/html">Galery</a></li>
-              <li><a href="https://andresuarisman.github.io/data">Data</a></li>
+              <li><a href="https://andresuarisman.github.io/galery.html">Galery</a></li>
+              <li><a href="https://andresuarisman.github.io/data.html">Data</a></li>
               <li><a href="https://fst.uin-suska.ac.id/">WEB FAKULTAS</a></li>
               </ul>
           </nav>
