--- a/index2.html
+++ b/index2.html
@@ -26,8 +26,8 @@
         <a href="https://www.andresuarisman.github.io/index2.html" class="logo">ANDRE</a>
         <!---menu---------------->
         <ul>
-          <li><a href="https://www.andresuarisman.github.io/index.html">HOME</a></li>
-          <li><a href="https://www.andresuarisman.github.io/index2.html">BOOTSTRAP</a></li>
+          <li><a href="andresuarisman.github.io/index.html">HOME</a></li>
+          <li><a href="andresuarisman.github.io/index2.html">BOOTSTRAP</a></li>
         </ul>
       </nav>
 
@@ -49,12 +49,12 @@
 
     <div class="box">
       <div class="box-1"> 
-       <a href="https://www.andresuarisman.github.io/profile.html"> <p>PROFILE</p> </a> 
+       <a href="andresuarisman.github.io/profile.html"> <p>PROFILE</p> </a> 
       
       </div>
 
       <div class="box-2">
-        <a href="https://www.andresuarisman.github.io/galery.html"> <p>GALERY</p> </a> 
+        <a href="andresuarisman.github.io/galery.html"> <p>GALERY</p> </a> 
         </div>
 
       <div class="box-3">
