--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://www.andresuarisman.github.io/css/bootstrap.css">
+    <link rel="stylesheet" href="andresuarisman.github.io/css/bootstrap.css">
     <link rel="stylesheet" href="andresuarisman.github.io/styleb.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -32,7 +32,7 @@
       </nav>
 
       <div class="profil text-center">
-        <img src="https://www.andresuarisman.github.io/gambar/about-img.jpg" class="img-circle">
+        <img src="andresuarisman.github.io/gambar/about-img.jpg" class="img-circle">
 
       </div>
       <div class="about">
