--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
               <li><a href="https://andresuarisman.github.io/galery.html">Galery</a></li>
               <li><a href="https://andresuarisman.github.io/data.html">Data</a></li>
               <li><a href="https://fst.uin-suska.ac.id/">WEB FAKULTAS</a></li>
+                  <li><a href="https://andresuarisman.github.io/index2">BOOTSTRAP</a><li>
               </ul>
           </nav>
 
