--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,7 @@
         <!---menu---------------->
         <ul>
           <li><a href="andresuarisman.github.io/index.html">HOME</a></li>
-          <li><a href="andresuarisman.github.io/index2.html">BOOTSTRAP</a></li>
+          <li><a href="andresuarisman.github.io/index2">BOOTSTRAP</a></li>
         </ul>
       </nav>
 
