--- a/boot.html
+++ b/boot.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="https://www.andresuarisman.github.io/css/bootstrap.css">
-    <link rel="stylesheet" href="https://www.andresuarisman.github.io/styleb.css">
+    <link rel="stylesheet" href="andresuarisman.github.io/styleb.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -23,16 +23,16 @@
       <!----navigasi-------------------->
       <nav> 
         <!----logo---------------------->
-        <a href="https://www.andresuarisman.github.io/index2.html" class="logo">ANDRE</a>
+        <a href="andresuarisman.github.io/boot.html" class="logo">ANDRE</a>
         <!---menu---------------->
         <ul>
           <li><a href="https://www.andresuarisman.github.io/index.html">HOME</a></li>
-          <li><a href="https://www.andresuarisman.github.io/index2.html">BOOTSTRAP</a></li>
+          <li><a href="andresuarisman.github.io/boot.html">BOOTSTRAP</a></li>
         </ul>
       </nav>
 
       <div class="profil text-center">
-        <img src="https://www.andresuarisman.github.io/gambar/about-img.jpg" class="img-circle">
+        <img src="andresuarisman.github.io/gambar/about-img.jpg" class="img-circle">
 
       </div>
       <div class="about">
