--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,7 @@
       <!----navigasi-------------------->
       <nav> 
         <!----logo---------------------->
-        <a href="https://www.andresuarisman.github.io/index2.html" class="logo">ANDRE</a>
+        <a href="andresuarisman.github.io/index2" class="logo">ANDRE</a>
         <!---menu---------------->
         <ul>
           <li><a href="andresuarisman.github.io/index.html">HOME</a></li>
@@ -64,9 +64,9 @@
 
     <div class="footer">
        <div class="medsos">
-         <a href="#"> <img src="https://www.andresuarisman.github.io/gambar/fb.png" class=" fb"></a>
-         <a href="#"> <img src="https://www.andresuarisman.github.io/gambar/yt.png" class="yt"> </a>
-         <a href="#"> <img src="https://www.andresuarisman.github.io/gambar/ig.png" class="ig"> </a>          
+         <a href="#"> <img src="andresuarisman.github.io/gambar/fb.png" class=" fb"></a>
+         <a href="#"> <img src="andresuarisman.github.io/gambar/yt.png" class="yt"> </a>
+         <a href="#"> <img src="andresuarisman.github.io/gambar/ig.png" class="ig"> </a>          
        </div>
        <div class="f-text">
         <p>&copy;copyright 2020 ANDRE</p>
